--- a/setup.cfg
+++ b/setup.cfg
@@ -2,21 +2,21 @@
 #
 # Copyright (C) 2020-2024 Graz University of Technology.
 #
-# invenio-config-tugraz is free software; you can redistribute it and/or
+# invenio-config-iform is free software; you can redistribute it and/or
 # modify it under the terms of the MIT License; see LICENSE file for more
 # details.
 
 [metadata]
-name = invenio-config-tugraz
-version = attr: invenio_config_tugraz.__version__
-description = "Invenio module that adds tugraz configs."
+name = invenio-config-iform
+version = attr: invenio_config_iform.__version__
+description = "Invenio module that adds I-Form configs."
 long_description = file: README.rst, CHANGES.rst
 keywords = invenio config TU-Graz
 license = MIT
 author = "Graz University of Technology"
 author_email = info@tugraz.at
 platforms = any
-url = https://github.com/tu-graz-library/invenio-config-tugraz
+url = https://github.com/Cian-H/invenio_config_iform
 classifiers =
     Environment :: Web Environment
     Intended Audience :: Developers
@@ -49,15 +49,15 @@ tests =
 
 [options.entry_points]
 invenio_base.apps =
-    invenio_config_tugraz = invenio_config_tugraz:InvenioConfigTugraz
+    invenio_config_iform = invenio_config_iform:InvenioConfigIform
 invenio_base.blueprints =
-    invenio_config_tugraz = invenio_config_tugraz.views:ui_blueprint
+    invenio_config_iform = invenio_config_iform.views:ui_blueprint
 invenio_i18n.translations =
-    messages = invenio_config_tugraz
+    messages = invenio_config_iform
 invenio_config.module =
-    invenio_config_tugraz = invenio_config_tugraz.config
+    invenio_config_iform = invenio_config_iform.config
 invenio_base.finalize_app =
-    invenio_config_tugraz = invenio_config_tugraz.ext:finalize_app
+    invenio_config_iform = invenio_config_iform.ext:finalize_app
 
 [aliases]
 test = pytest
@@ -71,22 +71,22 @@ all_files = 1
 universal = 1
 
 [compile_catalog]
-directory = invenio_config_tugraz/translations/
+directory = invenio_config_iform/translations/
 
 [extract_messages]
 copyright_holder = Graz University of Technology
 msgid_bugs_address = mojib.wali@tugraz.at
 mapping-file = babel.ini
-output-file = invenio_config_tugraz/translations/messages.pot
+output-file = invenio_config_iform/translations/messages.pot
 add-comments = NOTE
 
 [init_catalog]
-input-file = invenio_config_tugraz/translations/messages.pot
-output-dir = invenio_config_tugraz/translations/
+input-file = invenio_config_iform/translations/messages.pot
+output-dir = invenio_config_iform/translations/
 
 [update_catalog]
-input-file = invenio_config_tugraz/translations/messages.pot
-output-dir = invenio_config_tugraz/translations/
+input-file = invenio_config_iform/translations/messages.pot
+output-dir = invenio_config_iform/translations/
 
 [isort]
 profile=black
@@ -95,6 +95,6 @@ profile=black
 ignore = *-requirements.txt
 
 [tool:pytest]
-addopts = --black --cov=invenio_config_tugraz --cov-report=term-missing
-testpaths = tests invenio_config_tugraz
+addopts = --black --cov=invenio_config_iform --cov-report=term-missing
+testpaths = tests invenio_config_iform
 live_server_scope = module
