--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -5,5 +5,5 @@ on:
 
 jobs:
   build-n-publish:
-    uses: tu-graz-library/.github/.github/workflows/pypi-publish.yml@main
+    uses: Cian-H/.github/.github/workflows/pypi-publish.yml@main
     secrets: inherit
