Added devenv definition

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,13 @@ target/
 
 # Vim swapfiles
 .*.sw?
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
