--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -92,6 +92,7 @@ jobs:
         with:
           python-version: "${{ matrix.python-version }}"
           enable-cache: true
+          activate-environment: true
           cache-dependency-glob: |
             **/setup.cfg
             **/pyproject.toml
