--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,8 +80,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install -e ".[tests]"
+          uv sync --group tests
 
       - name: Run tests
         run: |
-          ./run-tests.sh
+          uv run ./run-tests.sh
