--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Development Status :: 3 - Alpha",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "invenio-cache>=1.1.1",
     "invenio-i18n>=2.0.0",
@@ -39,31 +39,16 @@ tests = [
     "Sphinx>=4.5.0",
 ]
 
-[project.entry-points."invenio_base.apps"]
-invenio_config_iform = "invenio_config_iform:InvenioConfigIform"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[project.entry-points."invenio_base.blueprints"]
-invenio_config_iform = "invenio_config_iform.views:ui_blueprint"
+[tool.hatch.version]
+path = "invenio_config_iform/__version__.py"
 
-[project.entry-points."invenio_i18n.translations"]
-messages = "invenio_config_iform"
-
-[project.entry-points."invenio_config.module"]
-invenio_config_iform = "invenio_config_iform.config"
-
-[project.entry-points."invenio_base.finalize_app"]
-invenio_config_iform = "invenio_config_iform.ext:finalize_app"
-
-[tool.setuptools]
-zip-safe = false
-include-package-data = true
-
-[tool.setuptools.packages.find]
+[tool.hatch.build]
 include = ["invenio_config_iform"]
 exclude = [".venv", "tests/*", "*/tests/*", "*.rst", "run-tests.sh"]
-
-[tool.setuptools.dynamic]
-version = { attr = "invenio_config_iform.__version__" }
 
 # Testing configuration
 [tool.pytest]
@@ -133,3 +118,6 @@ output-dir = "invenio_config_iform/translations/"
 [tool.babel.update_catalog]
 input-file = "invenio_config_iform/translations/messages.pot"
 output-dir = "invenio_config_iform/translations/"
+
+[tool.uv.sources]
+invenio-config-iform = { workspace = true }
