--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,13 @@ classifiers = [
     "Programming Language :: Python",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Development Status :: 3 - Alpha",
 ]
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.10,<3.14"
 dependencies = [
     "invenio-cache>=1.1.1",
     "invenio-i18n>=2.0.0",
@@ -37,8 +40,8 @@ test = "scripts.test:main"
 [dependency-groups]
 tests = [
     "invenio-app>=1.5.0",
-    "invenio-search[opensearch2]>=2.1.0,<3.0.0",
-    "pytest-invenio>=2.1.0,<3.0.0",
+    "invenio-search[opensearch2]>=2.1.0",
+    "pytest-invenio>=2.1.0",
     "pytest-ruff>=0.4.1",
     "ruff>=0.5.3",
     "Sphinx>=4.5.0",
