--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ invenio_config_iform = "invenio_config_iform.config"
 invenio_config_iform = "invenio_config_iform.ext:finalize_app"
 
 [dependency-groups]
+dev = ["hatch>=1.14.1", "pydocstyle>=6.3.0", "ruff>=0.11.7"]
 tests = [
     "invenio-app>=1.5.0",
     "invenio-search[opensearch2]>=2.1.0",
@@ -63,11 +64,12 @@ tests = [
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-calver"]
 build-backend = "hatchling.build"
 
 [tool.hatch.version]
-path = "invenio_config_iform/__version__.py"
+scheme = "calver"
+path = "invenio_config_iform/__about__.py"
 
 [tool.hatch.build]
 include = ["invenio_config_iform"]
