--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -16,5 +16,5 @@ jobs:
         uses: Jorricks/action-python-autotagging@1.0.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          path: src/your_package/__about__.py  # Path to your version file
-          variable: __version__              # Name of the version variable
+          path: invenio_config_iform/__about__.py
+          variable: __version__
