Another attempt to patch publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Build package
         run: uv build
       - name: Publish to PyPI
-        run: uv publish
+        run: uv publish --token ${{ secrets.PYPI_API_TOKEN }}
