--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,13 @@ jobs:
     environment: release
     steps:
       - uses: actions/checkout@v4
-      - name: Install uv
-        run: pip install uv
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          python-version: "${{ matrix.python-version }}"
+          enable-cache: true
+          cache-dependency-glob: |
+            pyproject.toml
       - name: Build package
         run: uv build
       - name: Publish to PyPI
