--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,15 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  jobs:
+    pre_create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+    create_environment:
+      - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
+    install:
+      - VIRTUAL_ENV="${READTHEDOCS_VIRTUALENV_PATH}" uv pip install -r docs/requirements.txt
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
