--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,17 +15,10 @@ build:
       - asdf install uv latest
       - asdf global uv latest
     create_environment:
-      - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
+      - uv sync --group docs
     install:
-      - VIRTUAL_ENV="${READTHEDOCS_VIRTUALENV_PATH}" uv pip install -r docs/requirements.txt
+      - uv run python -m sphinx -T -d docs/_build/doctrees -D language=en docs $READTHEDOCS_OUTPUT/html
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
-
-# declare the Python requirements required to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-python:
-  install:
-  - requirements: docs/requirements.txt
-
