--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,11 @@ tests = [
     "ruff>=0.5.3",
     "Sphinx>=4.5.0",
 ]
+docs = [
+    "invenio-app>=1.5.0",
+    "invenio-search[opensearch2]>=2.1.0",
+    "Sphinx>=4.5.0",
+]
 
 [build-system]
 requires = ["hatchling", "hatch-calver"]
