--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,4 +91,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: coverage.lcov
+          path-to-lcov: coverage.xml
