Removed unnecessary babel config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,12 +87,12 @@ exclude = [".venv", "tests/*", "*/tests/*", "*.rst", "run-tests.sh"]
 
 # Testing configuration
 [tool.pytest]
-addopts = "--ruff --ruff-format --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=invenio_config_iform --cov-report=term-missing tests invenio_config_iform"
+addopts = "--ruff --ruff-format --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=./invenio_config_iform --cov-report=term-missing tests ./invenio_config_iform"
 testpaths = ["tests", "invenio_config_iform"]
 live_server_scope = "module"
 
 [tool.pytest.ini_options]
-addopts = "--ruff --ruff-format --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=invenio_config_iform --cov-report=term-missing tests invenio_config_iform"
+addopts = "--ruff --ruff-format --pydocstyle --doctest-glob=\"*.rst\" --doctest-modules --cov=./invenio_config_iform --cov-report=term-missing tests ./invenio_config_iform"
 testpaths = ["tests", "invenio_config_iform"]
 live_server_scope = "module"
 
@@ -133,23 +133,3 @@ line-ending = "auto"
 
 [tool.pydocstyle]
 add_ignore = ["D401"]
-
-# Babel configuration
-[tool.babel.compile_catalog]
-directory = "invenio_config_iform/translations/"
-use-fuzzy = true
-
-[tool.babel.extract_messages]
-copyright_holder = "I-Form Advanced Research Manufacturing Research Centre"
-msgid_bugs_address = "cian.hughes@dcu.ie"
-mapping-file = "babel.ini"
-output-file = "invenio_config_iform/translations/messages.pot"
-add-comments = "NOTE"
-
-[tool.babel.init_catalog]
-input-file = "invenio_config_iform/translations/messages.pot"
-output-dir = "invenio_config_iform/translations/"
-
-[tool.babel.update_catalog]
-input-file = "invenio_config_iform/translations/messages.pot"
-output-dir = "invenio_config_iform/translations/"
